--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -4,8 +4,8 @@
   "about": "À propos",
   "connexion": "Connexion",
   "signUp": "S'inscrire",
-  "title_1": "La prochaine génération",
-  "title_2": "bibliothèque numérique",
+  "title_1": "La lecture est une porte",
+  "title_2": "ouverte sur d'autres mondes.",
   "title_description": "Embrassez l'avenir de l'accès au savoir avec notre bibliothèque numérique de pointe. Explorez une vaste collection de livres, d'articles et de documents de recherche, le tout à portée de main.",
   "visiteCatalogue": "Visiter le catalogue",
   "howItWorks": "Comment ça marche ?",
