--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -68,11 +68,11 @@
   "categories": "Categories",
   "basic": "Basic",
   "standard": "Standard",
-  "firtName": "First Name",
+  "firstName": "First Name",
   "lastName": "Last Name",
   "email": "E-mail",
   "phone": "Phone",
-  "address": "Address",
+  "address": "Address / City",
   "city": "City",
   "cni": "CNI",
   "password": "Password",
@@ -83,5 +83,7 @@
   "termsOfUse": "terms of use",
   "and": "and",
   "privacy": "privacy policy",
-  "subscribeNow": "Subscribe now"
+  "subscribeNow": "Subscribe now",
+  "onBook": "1 book",
+  "threeBooks": "3 books"
 }
