--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -22,7 +22,7 @@
     "l4": "Checkout book",
     "l4_des": "Retrieve your reserved book from your chosen library branch."
   },
-  "price": "Pricing",
+  "price": "REGISTRATION",
   "price_description": "The right price for you, whoever you are",
   "yearly": "Yearly",
   "monthly": "Monthly",
