--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -20,7 +20,7 @@
     "l4": "Retirer un livre",
     "l4_des": "Récupérez votre livre réservé dans la succursale de votre bibliothèque choisie."
   },
-  "price": "Prix",
+  "price": "ABONNEMENT",
   "price_description": "Le prix idéal pour vous, quel que soit votre profil",
   "yearly": "Annuel",
   "monthly": "Mensuel",
