--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -153,5 +153,7 @@
     "subtitle": "We're here to help! Check out our",
     "linkText": "Common Questions",
     "page": "page for quick answers."
-  }
+  },
+  "weekChoice": "Choice of the week",
+  "unlimited": "unlimited"
 }
