--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -147,5 +147,7 @@
     "subtitle": "Nous sommes là pour vous aider ! Consultez notre",
     "linkText": "Page des questions fréquentes",
     "page": "pour des réponses rapides."
-  }
+  },
+  "weekChoice": "Choix de la Semaine",
+  "unlimited": "illimité"
 }
