--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -159,5 +159,29 @@
   "are_you_the_end_user": "Are you the end user?",
   "Yes": "Yes",
   "No": "No",
-  "enter_end_user_info": "Enter end user information"
+  "enter_end_user_info": "Enter end user information",
+  "barcode": "Barcode",
+  "find_account": "Find Account",
+  "renew_subscription": "Renew Subscription",
+  "no_user_found": "No user found",
+  "renew": "Renew",
+  "change_subscription_plan": "Change Plan",
+  "name": "Name",
+  "first_name": "First Name",
+  "middle_name": "Middle Name",
+  "last_name": "Last Name",
+  "general_info": "General Info",
+  "id": "Id",
+  "status": "status",
+  "gender": "Gender",
+  "birthday": "Birthday",
+  "currentAge": "Current Age",
+  "contact_information": "Contact Information",
+  "zip": "Zip",
+  "country": "Country",
+  "edit": "Edit",
+  "subcription_Plan": "Subscription Plan",
+  "duration_plan": "Duration Plan",
+  "last_subscription": "Last Subscription",
+  "expired_date": "Expiration Date"
 }
