--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -162,7 +162,7 @@
   "enter_end_user_info": "Enter end user information",
   "barcode": "Barcode",
   "find_account": "Find Account",
-  "renew_subscription": "Renew Subscription",
+  "renew_subscription": "Renewal",
   "no_user_found": "No user found",
   "renew": "Renew",
   "change_subscription_plan": "Change Plan",
