--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -183,5 +183,6 @@
   "subcription_Plan": "Subscription Plan",
   "duration_plan": "Duration Plan",
   "last_subscription": "Last Subscription",
-  "expired_date": "Expiration Date"
+  "expired_date": "Expiration Date",
+  "find": "Find us at maison dams - Yaounde"
 }
