--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -7,7 +7,7 @@
   "title_1": "La lecture est une porte",
   "title_2": "ouverte sur d'autres mondes.",
   "title_description": "Embrassez l'avenir de l'accès au savoir avec notre bibliothèque numérique de pointe. Explorez une vaste collection de livres, d'articles et de documents de recherche, le tout à portée de main.",
-  "visiteCatalogue": "Visiter le catalogue",
+  "visiteCatalogue": "CLIQUER POUR EMPRUNTER DES LIVRES",
   "howItWorks": "Comment ça marche ?",
   "howItWorks_desciption": "Emprunter un livre est aussi simple que de se rendre à votre bibliothèque locale, de trouver le livre que vous voulez et de l'emprunter avec votre carte de bibliothèque.",
   "howItWorks_d": {
