--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -132,7 +132,7 @@
   "gotoLoginPage": "Aller à la page de connexion",
   "feedback": {
     "title": "Faire une plainte ou une suggestion",
-    "subtitle": "Nous apprécions vos retours. Dites-nous comment nous pouvons améliorer.",
+    "subtitle": "Nous apprécions vos retours. Dites-nous comment nous pouvons nous améliorer.",
     "button": "suggestion",
     "modalTitle": "Soumettez votre retour",
     "name": "Nom",
