--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -183,7 +183,7 @@
   "duration_plan": "Duration Plan",
   "last_subscription": "Last Subscription",
   "expired_date": "Expiration Date",
-  "find": "Find us at maison dams - Yaounde",
+  "find": "Find us at marché Acacias - Yaounde",
   "French": "French",
   "English": "English",
   "contact": {
