--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -153,6 +153,7 @@
   "are_you_the_end_user": "Êtes-vous l'utilisateur final ?",
   "Yes": "Oui",
   "No": "Non",
+  "find": "Retrouvez-nous au marché Acacias - Yaoundé",
   "enter_end_user_info": "Saisissez les informations de l'utilisateur final",
   "French": "Français",
   "English": "Anglais",
