--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -73,7 +73,8 @@
   "phone": "Phone",
   "address": "Address / City",
   "city": "City",
-  "cni": "CNI",
+  "neighborhood": "Neighborhood",
+  "cni": "National ID number",
   "password": "Password",
   "confirmPassword": "Confirm Password",
   "createAccount": "Create account",
