--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -72,7 +72,8 @@
   "phone": "Téléphone",
   "address": "Adresse",
   "city": "Ville",
-  "cni": "CNI",
+  "neighborhood": "Quartier",
+  "cni": "Numéro CNI",
   "password": "Mot de passe",
   "confirmPassword": "Confirmer mot de passe",
   "createAccount": "Créer un compte",
