--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -7,7 +7,7 @@
   "signUp": "Sign Up",
   "title_1": "Next generation",
   "title_2": "digital Library",
-  "title_description": "Embrace the future of knowledge access with our cutting-edge digital library. Explore a vast collection of books, articles, and research papers, all at your fingertips.",
+  "title_description": "Embrace the future of knowledge access with our cutting-edge library. Explore a vast collection of books, articles, and research papers, all at your fingertips.",
   "visiteCatalogue": "CLICK TO ENTER THE LENDING LIBRARY",
   "howItWorks": "How it works?",
   "howItWorks_desciption": "Borrowing a book is as easy as visiting your local library, finding the book you want, and checking it out with your library card",
