--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -6,7 +6,7 @@
   "blog": "blog",
   "signUp": "Sign Up",
   "title_1": "Next generation",
-  "title_2": "digital Library",
+  "title_2": "Library",
   "title_description": "Embrace the future of knowledge access with our cutting-edge library. Explore a vast collection of books, articles, and research papers, all at your fingertips.",
   "visiteCatalogue": "CLICK TO ENTER THE LENDING LIBRARY",
   "howItWorks": "How it works?",
