--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -5,7 +5,7 @@
   "about_us": "À propos",
   "blog": "Blog",
   "signUp": "S'inscrire",
-  "title_1": "Bibliothèque numérique",
+  "title_1": "Bibliothèque",
   "title_2": "nouvelle génération",
   "title_description": "Embrassez l'avenir de l'accès au savoir avec notre bibliothèque de pointe. Explorez une vaste collection de livres, d'articles et de documents de recherche, le tout à portée de main.",
   "visiteCatalogue": "CLIQUEZ POUR ACCÉDER À LA BIBLIOTHÈQUE DE PRÊT",
