--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -135,6 +135,7 @@
   "paymentSuccessMessage": "Thank you for your payment. You can now borrow books and explore the catalog.",
   "gotoLoginPage": "Go to login page",
   "1 book": "1 book",
+  "1 BOOK": "1 BOOK",
   "3 books": "3 books",
   "feedback": {
     "title": "Make a Complaint or Suggestion",
