--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -7,7 +7,7 @@
   "signUp": "S'inscrire",
   "title_1": "Bibliothèque",
   "title_2": "nouvelle génération",
-  "title_description": "Embrassez l'avenir de l'accès au savoir avec notre bibliothèque de pointe. Explorez une vaste collection de livres, d'articles et de documents de recherche, le tout à portée de main.",
+  "title_description": "Embrassez l’avenir de l’accès au savoir avec notre bibliothèque physique. Explorez une vaste collection de livres et de documents de recherche, le tout à portée de main.",
   "visiteCatalogue": "CLIQUEZ POUR ACCÉDER À LA BIBLIOTHÈQUE DE PRÊT",
   "howItWorks": "Comment ça marche ?",
   "howItWorks_desciption": "Emprunter un livre est aussi simple que de visiter votre bibliothèque locale, de trouver le livre que vous voulez et de l'emprunter avec votre carte de bibliothèque.",
